align issue

--- a/src/app/_style/app.card.scss
+++ b/src/app/_style/app.card.scss
@@ -82,7 +82,7 @@
 
   }
   .info-row {
-    margin-bottom: 0;
+    margin:0;
     .org-name {
       padding-left: 0;
     }
